// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot should have matching default structure 1`] = `
.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c6:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c6::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c6::-webkit-inner-spin-button {
  height: auto;
}

.c6::-webkit-outer-spin-button {
  height: auto;
}

.c6 ::before,
.c6 ::after {
  box-sizing: border-box;
}

.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0 ::before,
.c0 ::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c3 ::before,
.c3 ::after {
  box-sizing: border-box;
}

.c5 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c5::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c5 ::before,
.c5 ::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2 ::before,
.c2 ::after {
  box-sizing: border-box;
}

.c8 {
  position: absolute;
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
}

.c9 {
  vertical-align: baseline;
}

.c9.fi-icon {
  display: inline-block;
}

.c9 .fi-icon-base-fill {
  fill: currentColor;
}

.c9 .fi-icon-base-stroke {
  stroke: currentColor;
}

.c9.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c9.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c10 {
  vertical-align: baseline;
}

.c10.fi-icon {
  display: inline-block;
}

.c10 .fi-icon-base-fill {
  fill: currentColor;
}

.c10 .fi-icon-base-stroke {
  stroke: currentColor;
}

.c10.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c10.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c11 {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans 3','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(0, 0%, 13%);
  font-size: 14px;
  line-height: 20px;
}

.c11.fi-status-text {
  display: block;
}

.c11.fi-status-text.fi-status-text--error {
  color: hsl(3, 59%, 43%);
}

.c11.fi-status-text .fi-icon {
  vertical-align: middle;
  transform: translateY(-0.1em);
  margin-right: 5px;
}

.c11.fi-status-text.fi-status-text--success .fi-icon-base-fill {
  fill: hsl(166, 90%, 34%);
}

.c4.fi-label .fi-label_label-span {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans 3','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  display: inline-block;
  vertical-align: middle;
  color: hsl(0, 0%, 13%);
}

.c4.fi-label .fi-label_label-span .fi-label_optional-text {
  font-family: 'Source Sans 3','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c4.fi-label .fi-label_label-span .fi-tooltip {
  margin-left: 6px;
}

.c7 {
  position: relative;
  cursor: pointer;
  pointer-events: all;
  height: 20px;
  width: 20px;
  justify-content: center;
  align-items: center;
}

.c7:focus {
  outline: 3px solid transparent;
}

.c7:focus:after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0, 0%, 100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196, 77%, 44%);
  z-index: 9999;
}

.c7.fi-input-clear-button {
  display: flex;
}

.c7.fi-input-clear-button .fi-input-clear-button_icon {
  width: 16px;
  height: 16px;
}

.c7.fi-input-clear-button .fi-input-clear-button_icon .fi-icon-base-fill {
  fill: hsl(212, 63%, 37%);
}

.c7.fi-input-clear-button[disabled],
.c7.fi-input-clear-button:disabled {
  cursor: not-allowed;
}

.c7.fi-input-clear-button[disabled] .fi-input-clear-button_icon .fi-icon-base-fill,
.c7.fi-input-clear-button:disabled .fi-input-clear-button_icon .fi-icon-base-fill {
  fill: hsl(202, 7%, 67%);
}

.c1 {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans 3','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  width: 290px;
}

.c1 .fi-label,
.c1 .fi-hint-text,
.c1 .fi-status-text {
  margin: 0;
}

.c1 .fi-search-input_wrapper {
  width: 100%;
  display: inline-block;
}

.c1 .fi-search-input_wrapper .fi-search-input_label--visible {
  margin-bottom: 10px;
}

.c1 .fi-search-input_wrapper .fi-search-input_statusText--has-content {
  margin-top: 5px;
}

.c1 .fi-search-input_functionality-container {
  position: relative;
  display: flex;
  width: 100%;
}

.c1 .fi-search-input_functionality-container:has(.fi-search-input_input:focus) {
  box-shadow: 0 1px 2px 0 hsla(214, 100%, 24%, 0.1) inset;
  outline: 3px solid transparent;
}

.c1 .fi-search-input_functionality-container:has(.fi-search-input_input:focus):after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0, 0%, 100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196, 77%, 44%);
  z-index: 9999;
  top: -3px;
  bottom: -3px;
  right: -3px;
  left: -3px;
}

.c1 .fi-search-input_functionality-container:has(.fi-search-input_input:focus) .fi-search-input_input:focus {
  outline: none;
}

.c1 .fi-search-input_input-element-container {
  background-color: hsl(0, 0%, 100%);
  color: hsl(0, 0%, 13%);
  min-height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: 1px solid hsl(201, 7%, 58%);
  border-radius: 2px 0 0 2px;
}

.c1 .fi-search-input_input-element-container >input:focus {
  outline-color: hsl(196, 77%, 44%);
  outline-width: 2px;
  outline-offset: 2px;
  outline-style: solid;
}

.c1 .fi-search-input_input-element-container:focus-within >input:focus {
  outline: none;
}

.c1 .fi-search-input_input-element-container .fi-search-input_search-icon {
  position: absolute;
  width: 18px;
  height: 18px;
  top: 10px;
  right: 10px;
}

.c1 .fi-search-input_input-element-container .fi-search-input_search-icon .fi-icon-base-fill {
  fill: hsl(202, 7%, 40%);
}

.c1 .fi-search-input_input {
  color: hsl(0, 0%, 13%);
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans 3','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  min-width: 245px;
  max-width: 100%;
  padding: 6px 16px;
  border: 1px solid hsl(202, 7%, 80%);
  border-radius: 2px;
  line-height: 1;
  padding-top: 6px;
  padding-bottom: 6px;
  padding-left: 10px;
  border: 0;
  flex-grow: 3;
  min-width: 105px;
  width: 100%;
  min-height: 36px;
  margin-top: 1px;
  margin-bottom: 1px;
  appearance: none;
}

.c1 .fi-search-input_input::placeholder {
  font-style: italic;
  color: hsl(201, 7%, 46%);
  opacity: 1;
}

.c1 .fi-search-input_input::-ms-clear {
  display: none;
  width: 0;
  height: 0;
}

.c1 .fi-search-input_input::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.c1 .fi-search-input_input::-webkit-search-decoration,
.c1 .fi-search-input_input::-webkit-search-cancel-button,
.c1 .fi-search-input_input::-webkit-search-results-button,
.c1 .fi-search-input_input::-webkit-search-results-decoration {
  display: none;
}

.c1 .fi-search-input_button {
  flex: 0 0 auto;
  box-sizing: border-box;
  outline: none;
  box-shadow: none;
  white-space: nowrap;
  cursor: default;
}

.c1 .fi-search-input_button:hover {
  background: linear-gradient(0deg, hsl(212, 63%, 45%) 0%, hsl(212, 63%, 49%) 100%);
}

.c1 .fi-search-input_button:active {
  background-color: hsl(212, 63%, 37%);
}

.c1 .fi-search-input_button .fi-icon-base-fill {
  fill: hsl(0, 0%, 100%);
}

.c1 .fi-search-input_button-clear {
  position: absolute;
  top: 0;
  right: 0px;
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
}

.c1 .fi-search-input_button-clear:focus {
  outline: 3px solid transparent;
}

.c1 .fi-search-input_button-clear-icon {
  width: 12px;
  height: 12px;
}

.c1 .fi-search-input_button-clear-icon .fi-icon-base-fill {
  fill: hsl(212, 63%, 37%);
}

.c1 .fi-search-input_button-search {
  border-radius: 0 2px 2px 0;
  border: 0;
}

.c1 .fi-search-input_button-search-icon {
  width: 18px;
  height: 18px;
}

.c1 .fi-search-input_button-search-icon .fi-icon-base-fill {
  fill: hsl(202, 7%, 40%);
}

.c1.fi-search-input--no-search-button .fi-search-input_functionality-container:has(.fi-search-input_search-icon) .fi-search-input_input {
  padding-right: 68px;
}

.c1.fi-search-input--no-search-button .fi-search-input_functionality-container:has(.fi-search-input_search-icon) .fi-search-input_input-element-container {
  border-radius: 2px;
}

.c1.fi-search-input--full-width {
  width: 100%;
  max-width: none;
}

.c1.fi-search-input--full-width .fi-search-input_wrapper {
  max-width: none;
}

.c1.fi-search-input--full-width .fi-search-input_input-element-container {
  max-width: none;
}

.c1.fi-search-input--error .fi-search-input_input-element-container {
  border: 1px solid hsl(3, 59%, 43%);
  border-right: 0;
}

.c1.fi-search-input--error .fi-search-input_button-search {
  border: 1px solid hsl(3, 59%, 43%);
  border-left: 0;
}

.c1.fi-search-input--not-empty .fi-search-input_input-element-container {
  position: relative;
}

.c1.fi-search-input--not-empty .fi-search-input_input {
  padding-right: 38px;
}

.c1.fi-search-input--not-empty .fi-search-input_button-clear {
  clip: auto;
  overflow: visible;
  height: 20px;
  width: 20px;
  margin: 9px;
}

.c1.fi-search-input--not-empty .fi-search-input_button-clear:hover {
  background: hsl(212, 63%, 95%);
}

.c1.fi-search-input--not-empty .fi-search-input_functionality-container:has(.fi-search-input_search-icon) .fi-search-input_button-clear {
  right: 32px;
}

.c1.fi-search-input--suggestions-open .fi-search-input_functionality-container[data-floating-ui-placement^='top']>* {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  border-top: 0;
  border-bottom: 1px solid hsl(201, 7%, 58%);
}

.c1.fi-search-input--suggestions-open .fi-search-input_functionality-container>* {
  border-bottom: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c1.fi-search-input--suggestions-open .fi-search-input--error .fi-search-input_functionality-container>*[data-floating-ui-placement^='top'] {
  border-bottom: 2px solid hsl(3, 59%, 43%);
}

@media (forced-colors: active) {
  .c1 .fi-search-input_button {
    border: solid 1px ButtonBorder;
  }
}

@media (forced-colors: active) {
  .c1 .fi-search-input_button .fi-icon-base-fill {
    fill: ButtonText;
  }
}

@media (forced-colors: active) {
  .c1.fi-search-input--not-empty .fi-search-input_button-clear .fi-icon-base-fill {
    fill: ButtonText;
  }
}

<div
  class="c0 c1 fi-search-input fi-search-input--no-search-button"
>
  <span
    class="c2 fi-search-input_wrapper"
  >
    <div
      class="c3 c4 fi-search-input_label--visible fi-label"
    >
      <label
        class="c2 fi-label_label-span"
        for="1"
      >
        Test search input
      </label>
    </div>
    <div
      class="c3 fi-search-input_functionality-container"
      data-floating-ui-placement="bottom"
    >
      <div
        class="c0 fi-search-input_input-element-container"
      >
        <input
          aria-invalid="false"
          autocomplete="off"
          class="c5 fi-search-input_input"
          data-testid="searchinput"
          id="1"
          type="search"
          value=""
        />
        <button
          class="c6 fi-input-clear-button c7 fi-search-input_button fi-search-input_button-clear"
          hidden=""
          tabindex="-1"
          type="button"
        >
          <span
            class="c2 c8 fi-visually-hidden"
          >
            Clear
          </span>
          <svg
            aria-hidden="true"
            class="fi-icon c9 fi-input-clear-button_icon"
            focusable="false"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="fi-icon-base-fill"
              d="M4.75 3.3 12 10.55l7.25-7.25a1.026 1.026 0 0 1 1.45 1.45L13.45 12l7.25 7.25a1.026 1.026 0 0 1-1.45 1.45L12 13.45 4.75 20.7a1.026 1.026 0 0 1-1.45-1.45L10.55 12 3.3 4.75A1.026 1.026 0 0 1 4.75 3.3Z"
              fill="#222"
              fill-rule="evenodd"
            />
          </svg>
        </button>
        <svg
          aria-hidden="true"
          class="fi-icon c10 fi-search-input_search-icon"
          focusable="false"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="fi-icon-base-fill"
            d="M9 0c4.962 0 9 4.038 9 9.001a8.955 8.955 0 0 1-1.971 5.614l7.678 7.678a.999.999 0 1 1-1.414 1.414l-7.678-7.678A8.957 8.957 0 0 1 9 18c-4.962 0-9-4.037-9-8.999C0 4.038 4.038 0 9 0Zm0 2C5.14 2 2 5.141 2 9.001 2 12.86 5.14 16 9 16s7-3.14 7-6.999C16 5.141 12.86 2 9 2Z"
            fill="#222"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c2 c11 fi-status-text"
      id="1-statusText"
    />
  </span>
</div>
`;

exports[`snapshot should have matching structure with suggestions open 1`] = `
.c7 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c7:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c7::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c7::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c7::-webkit-inner-spin-button {
  height: auto;
}

.c7::-webkit-outer-spin-button {
  height: auto;
}

.c7 ::before,
.c7 ::after {
  box-sizing: border-box;
}

.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c0 ::before,
.c0 ::after {
  box-sizing: border-box;
}

.c3 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c3 ::before,
.c3 ::after {
  box-sizing: border-box;
}

.c6 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
}

.c6::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}

.c6 ::before,
.c6 ::after {
  box-sizing: border-box;
}

.c14 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: list-item;
}

.c14 ::before,
.c14 ::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2 ::before,
.c2 ::after {
  box-sizing: border-box;
}

.c12 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: block;
  list-style-type: decimal;
  margin-top: 1em;
  margin-bottom: 1em;
  margin-left: 0;
  margin-right: 0;
  padding-left: 40px;
}

.c12 ::before,
.c12 ::after {
  box-sizing: border-box;
}

.c5 {
  position: absolute;
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
}

.c9 {
  vertical-align: baseline;
}

.c9.fi-icon {
  display: inline-block;
}

.c9 .fi-icon-base-fill {
  fill: currentColor;
}

.c9 .fi-icon-base-stroke {
  stroke: currentColor;
}

.c9.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c9.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c10 {
  vertical-align: baseline;
}

.c10.fi-icon {
  display: inline-block;
}

.c10 .fi-icon-base-fill {
  fill: currentColor;
}

.c10 .fi-icon-base-stroke {
  stroke: currentColor;
}

.c10.fi-icon--cursor-pointer {
  cursor: pointer;
}

.c10.fi-icon--cursor-pointer * {
  cursor: inherit;
}

.c11 {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans 3','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(0, 0%, 13%);
  font-size: 14px;
  line-height: 20px;
}

.c11.fi-status-text {
  display: block;
}

.c11.fi-status-text.fi-status-text--error {
  color: hsl(3, 59%, 43%);
}

.c11.fi-status-text .fi-icon {
  vertical-align: middle;
  transform: translateY(-0.1em);
  margin-right: 5px;
}

.c11.fi-status-text.fi-status-text--success .fi-icon-base-fill {
  fill: hsl(166, 90%, 34%);
}

.c4.fi-label .fi-label_label-span {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans 3','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  display: inline-block;
  vertical-align: middle;
  color: hsl(0, 0%, 13%);
}

.c4.fi-label .fi-label_label-span .fi-label_optional-text {
  font-family: 'Source Sans 3','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c4.fi-label .fi-label_label-span .fi-tooltip {
  margin-left: 6px;
}

.c8 {
  position: relative;
  cursor: pointer;
  pointer-events: all;
  height: 20px;
  width: 20px;
  justify-content: center;
  align-items: center;
}

.c8:focus {
  outline: 3px solid transparent;
}

.c8:focus:after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0, 0%, 100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196, 77%, 44%);
  z-index: 9999;
}

.c8.fi-input-clear-button {
  display: flex;
}

.c8.fi-input-clear-button .fi-input-clear-button_icon {
  width: 16px;
  height: 16px;
}

.c8.fi-input-clear-button .fi-input-clear-button_icon .fi-icon-base-fill {
  fill: hsl(212, 63%, 37%);
}

.c8.fi-input-clear-button[disabled],
.c8.fi-input-clear-button:disabled {
  cursor: not-allowed;
}

.c8.fi-input-clear-button[disabled] .fi-input-clear-button_icon .fi-icon-base-fill,
.c8.fi-input-clear-button:disabled .fi-input-clear-button_icon .fi-icon-base-fill {
  fill: hsl(202, 7%, 67%);
}

.c16 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c16 ::before,
.c16 ::after {
  box-sizing: border-box;
}

.c15 {
  display: block;
  position: relative;
  padding: 8px 32px 8px 10px;
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans 3','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
}

.c15:focus {
  outline: none;
}

.c15.fi-select-item {
  cursor: pointer;
}

.c15.fi-select-item .fi-select-item--query_highlight {
  background-color: transparent;
  font-weight: bold;
}

.c15.fi-select-item .fi-select-item_icon {
  position: absolute;
  top: 14px;
  right: 10px;
  height: 12px;
  width: 12px;
}

.c15.fi-select-item--selected {
  background-color: hsl(215, 100%, 95%);
  color: hsl(0, 0%, 13%);
}

.c15.fi-select-item--selected .fi-select-item--query_highlight {
  color: hsl(0, 0%, 13%);
}

.c15.fi-select-item--hasKeyboardFocus {
  background-color: hsl(212, 63%, 45%);
  color: hsl(0, 0%, 100%);
}

.c15.fi-select-item--hasKeyboardFocus .fi-select-item--query_highlight {
  color: hsl(0, 0%, 100%);
  background-color: hsl(212, 63%, 45%);
}

.c15.fi-select-item--disabled {
  color: hsl(202, 7%, 67%);
  cursor: not-allowed;
}

.c15.fi-select-item--disabled .fi-select-item--query_highlight {
  color: hsl(202, 7%, 67%);
}

.c15.fi-select-item--disabled.fi-select-item:hover {
  color: hsl(202, 7%, 67%);
}

.c15.fi-select-item--disabled.fi-select-item:hover .fi-select-item--query_highlight {
  color: hsl(202, 7%, 67%);
}

.c15.fi-select-item:hover {
  background-color: hsl(212, 63%, 45%);
  color: hsl(0, 0%, 100%);
}

.c15.fi-select-item:hover .fi-select-item--query_highlight {
  color: hsl(0, 0%, 100%);
}

.c15 .fi-select-item_wrapper {
  display: inline-block;
  width: 100%;
}

.c13 {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans 3','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  list-style-type: none;
  box-sizing: border-box;
  max-height: 265px;
  background-color: hsl(0, 0%, 100%);
  border-width: 0 1px 1px 1px;
  border-style: solid;
  border-color: hsl(201, 7%, 58%);
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  margin: 0;
  padding: 4px 0 0 0;
  display: block;
  width: 100%;
  overflow-y: auto;
  overflow-x: hidden;
}

.c13:focus {
  outline: none;
}

.c13[data-floating-ui-placement^='top'] {
  border-width: 1px 1px 0 1px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  border-top-left-radius: 2px;
  border-top-right-radius: 2px;
  padding: 0 0 4px 0;
}

.c1 {
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans 3','Helvetica Neue','Arial',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  width: 290px;
}

.c1 .fi-label,
.c1 .fi-hint-text,
.c1 .fi-status-text {
  margin: 0;
}

.c1 .fi-search-input_wrapper {
  width: 100%;
  display: inline-block;
}

.c1 .fi-search-input_wrapper .fi-search-input_label--visible {
  margin-bottom: 10px;
}

.c1 .fi-search-input_wrapper .fi-search-input_statusText--has-content {
  margin-top: 5px;
}

.c1 .fi-search-input_functionality-container {
  position: relative;
  display: flex;
  width: 100%;
}

.c1 .fi-search-input_functionality-container:has(.fi-search-input_input:focus) {
  box-shadow: 0 1px 2px 0 hsla(214, 100%, 24%, 0.1) inset;
  outline: 3px solid transparent;
}

.c1 .fi-search-input_functionality-container:has(.fi-search-input_input:focus):after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0, 0%, 100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196, 77%, 44%);
  z-index: 9999;
  top: -3px;
  bottom: -3px;
  right: -3px;
  left: -3px;
}

.c1 .fi-search-input_functionality-container:has(.fi-search-input_input:focus) .fi-search-input_input:focus {
  outline: none;
}

.c1 .fi-search-input_input-element-container {
  background-color: hsl(0, 0%, 100%);
  color: hsl(0, 0%, 13%);
  min-height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: 1px solid hsl(201, 7%, 58%);
  border-radius: 2px 0 0 2px;
}

.c1 .fi-search-input_input-element-container >input:focus {
  outline-color: hsl(196, 77%, 44%);
  outline-width: 2px;
  outline-offset: 2px;
  outline-style: solid;
}

.c1 .fi-search-input_input-element-container:focus-within >input:focus {
  outline: none;
}

.c1 .fi-search-input_input-element-container .fi-search-input_search-icon {
  position: absolute;
  width: 18px;
  height: 18px;
  top: 10px;
  right: 10px;
}

.c1 .fi-search-input_input-element-container .fi-search-input_search-icon .fi-icon-base-fill {
  fill: hsl(202, 7%, 40%);
}

.c1 .fi-search-input_input {
  color: hsl(0, 0%, 13%);
  letter-spacing: 0;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans 3','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  min-width: 245px;
  max-width: 100%;
  padding: 6px 16px;
  border: 1px solid hsl(202, 7%, 80%);
  border-radius: 2px;
  line-height: 1;
  padding-top: 6px;
  padding-bottom: 6px;
  padding-left: 10px;
  border: 0;
  flex-grow: 3;
  min-width: 105px;
  width: 100%;
  min-height: 36px;
  margin-top: 1px;
  margin-bottom: 1px;
  appearance: none;
}

.c1 .fi-search-input_input::placeholder {
  font-style: italic;
  color: hsl(201, 7%, 46%);
  opacity: 1;
}

.c1 .fi-search-input_input::-ms-clear {
  display: none;
  width: 0;
  height: 0;
}

.c1 .fi-search-input_input::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.c1 .fi-search-input_input::-webkit-search-decoration,
.c1 .fi-search-input_input::-webkit-search-cancel-button,
.c1 .fi-search-input_input::-webkit-search-results-button,
.c1 .fi-search-input_input::-webkit-search-results-decoration {
  display: none;
}

.c1 .fi-search-input_button {
  flex: 0 0 auto;
  box-sizing: border-box;
  outline: none;
  box-shadow: none;
  white-space: nowrap;
  cursor: default;
}

.c1 .fi-search-input_button:hover {
  background: linear-gradient(0deg, hsl(212, 63%, 45%) 0%, hsl(212, 63%, 49%) 100%);
}

.c1 .fi-search-input_button:active {
  background-color: hsl(212, 63%, 37%);
}

.c1 .fi-search-input_button .fi-icon-base-fill {
  fill: hsl(0, 0%, 100%);
}

.c1 .fi-search-input_button-clear {
  position: absolute;
  top: 0;
  right: 0px;
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  overflow: hidden;
}

.c1 .fi-search-input_button-clear:focus {
  outline: 3px solid transparent;
}

.c1 .fi-search-input_button-clear-icon {
  width: 12px;
  height: 12px;
}

.c1 .fi-search-input_button-clear-icon .fi-icon-base-fill {
  fill: hsl(212, 63%, 37%);
}

.c1 .fi-search-input_button-search {
  border-radius: 0 2px 2px 0;
  border: 0;
}

.c1 .fi-search-input_button-search-icon {
  width: 18px;
  height: 18px;
}

.c1 .fi-search-input_button-search-icon .fi-icon-base-fill {
  fill: hsl(202, 7%, 40%);
}

.c1.fi-search-input--no-search-button .fi-search-input_functionality-container:has(.fi-search-input_search-icon) .fi-search-input_input {
  padding-right: 68px;
}

.c1.fi-search-input--no-search-button .fi-search-input_functionality-container:has(.fi-search-input_search-icon) .fi-search-input_input-element-container {
  border-radius: 2px;
}

.c1.fi-search-input--full-width {
  width: 100%;
  max-width: none;
}

.c1.fi-search-input--full-width .fi-search-input_wrapper {
  max-width: none;
}

.c1.fi-search-input--full-width .fi-search-input_input-element-container {
  max-width: none;
}

.c1.fi-search-input--error .fi-search-input_input-element-container {
  border: 1px solid hsl(3, 59%, 43%);
  border-right: 0;
}

.c1.fi-search-input--error .fi-search-input_button-search {
  border: 1px solid hsl(3, 59%, 43%);
  border-left: 0;
}

.c1.fi-search-input--not-empty .fi-search-input_input-element-container {
  position: relative;
}

.c1.fi-search-input--not-empty .fi-search-input_input {
  padding-right: 38px;
}

.c1.fi-search-input--not-empty .fi-search-input_button-clear {
  clip: auto;
  overflow: visible;
  height: 20px;
  width: 20px;
  margin: 9px;
}

.c1.fi-search-input--not-empty .fi-search-input_button-clear:hover {
  background: hsl(212, 63%, 95%);
}

.c1.fi-search-input--not-empty .fi-search-input_functionality-container:has(.fi-search-input_search-icon) .fi-search-input_button-clear {
  right: 32px;
}

.c1.fi-search-input--suggestions-open .fi-search-input_functionality-container[data-floating-ui-placement^='top']>* {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  border-top: 0;
  border-bottom: 1px solid hsl(201, 7%, 58%);
}

.c1.fi-search-input--suggestions-open .fi-search-input_functionality-container>* {
  border-bottom: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.c1.fi-search-input--suggestions-open .fi-search-input--error .fi-search-input_functionality-container>*[data-floating-ui-placement^='top'] {
  border-bottom: 2px solid hsl(3, 59%, 43%);
}

@media (forced-colors: active) {
  .c15.fi-select-item .fi-select-item--query_highlight {
    background-color: Highlight;
  }
}

@media (forced-colors: active) {
  .c15.fi-select-item--hasKeyboardFocus {
    background-color: Highlight;
  }
}

@media (forced-colors: active) {
  .c15.fi-select-item--disabled {
    color: GrayText;
  }
}

@media (forced-colors: active) {
  .c15.fi-select-item--disabled .fi-select-item--query_highlight {
    color: GrayText;
  }
}

@media (forced-colors: active) {
  .c15.fi-select-item--disabled.fi-select-item:hover {
    color: GrayText;
  }
}

@media (forced-colors: active) {
  .c15.fi-select-item--disabled.fi-select-item:hover .fi-select-item--query_highlight {
    color: GrayText;
  }
}

@media (forced-colors: active) {
  .c15.fi-select-item:hover {
    background-color: Highlight;
  }
}

@media (forced-colors: active) {
  .c1 .fi-search-input_button {
    border: solid 1px ButtonBorder;
  }
}

@media (forced-colors: active) {
  .c1 .fi-search-input_button .fi-icon-base-fill {
    fill: ButtonText;
  }
}

@media (forced-colors: active) {
  .c1.fi-search-input--not-empty .fi-search-input_button-clear .fi-icon-base-fill {
    fill: ButtonText;
  }
}

<body>
  <div>
    <div
      class="c0 c1 fi-search-input fi-search-input--not-empty fi-search-input--suggestions-open fi-search-input--no-search-button"
    >
      <span
        class="c2 fi-search-input_wrapper"
      >
        <div
          class="c3 c4 fi-search-input_label--visible fi-label"
        >
          <label
            class="c2 fi-label_label-span"
            for="3"
          >
            Test search input
          </label>
        </div>
        <span
          class="c2 c5 fi-visually-hidden"
          id="3-suggestionHintText"
        >
          Search suggestions available
        </span>
        <div
          class="c3 fi-search-input_functionality-container"
          data-floating-ui-placement="bottom"
        >
          <div
            aria-expanded="true"
            aria-haspopup="listbox"
            aria-owns="3-itemlist"
            class="c0 fi-search-input_input-element-container"
            role="combobox"
          >
            <input
              aria-controls="3-itemlist"
              aria-describedby="3-suggestionHintText"
              aria-invalid="false"
              autocomplete="off"
              class="c6 fi-search-input_input"
              data-testid="searchinput"
              id="3"
              type="search"
              value="app"
            />
            <button
              class="c7 fi-input-clear-button c8 fi-search-input_button fi-search-input_button-clear"
              type="button"
            >
              <span
                class="c2 c5 fi-visually-hidden"
              >
                Clear
              </span>
              <svg
                aria-hidden="true"
                class="fi-icon c9 fi-input-clear-button_icon"
                focusable="false"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="fi-icon-base-fill"
                  d="M4.75 3.3 12 10.55l7.25-7.25a1.026 1.026 0 0 1 1.45 1.45L13.45 12l7.25 7.25a1.026 1.026 0 0 1-1.45 1.45L12 13.45 4.75 20.7a1.026 1.026 0 0 1-1.45-1.45L10.55 12 3.3 4.75A1.026 1.026 0 0 1 4.75 3.3Z"
                  fill="#222"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
            <svg
              aria-hidden="true"
              class="fi-icon c10 fi-search-input_search-icon"
              focusable="false"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="fi-icon-base-fill"
                d="M9 0c4.962 0 9 4.038 9 9.001a8.955 8.955 0 0 1-1.971 5.614l7.678 7.678a.999.999 0 1 1-1.414 1.414l-7.678-7.678A8.957 8.957 0 0 1 9 18c-4.962 0-9-4.037-9-8.999C0 4.038 4.038 0 9 0Zm0 2C5.14 2 2 5.141 2 9.001 2 12.86 5.14 16 9 16s7-3.14 7-6.999C16 5.141 12.86 2 9 2Z"
                fill="#222"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <span
          aria-atomic="true"
          aria-live="assertive"
          class="c2 c11 fi-status-text"
          id="3-statusText"
        />
        <span
          aria-atomic="true"
          aria-live="polite"
          class="c2 c5 fi-visually-hidden"
        >
          Options are available
        </span>
      </span>
    </div>
  </div>
  <div
    class="fi-portal"
    role="presentation"
    style="position: absolute; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px); width: 0px;"
    tabindex="-1"
  >
    <div
      class="c3"
    >
      <ul
        aria-activedescendant=""
        class="c12 fi-suggstion-list c13 fi-search-input_suggestions"
        data-floating-ui-placement="bottom"
        id="3-itemlist"
        role="listbox"
        tabindex="0"
      >
        <li
          aria-disabled="false"
          aria-selected="false"
          class="c14 fi-select-item c15"
          id="1"
          role="option"
          tabindex="-1"
        >
          app
          <mark
            class="c16 fi-select-item--query_highlight"
          >
            le
          </mark>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="c14 fi-select-item c15"
          id="2"
          role="option"
          tabindex="-1"
        >
          <mark
            class="c16 fi-select-item--query_highlight"
          >
            banana
          </mark>
        </li>
        <li
          aria-disabled="false"
          aria-selected="false"
          class="c14 fi-select-item c15"
          id="3"
          role="option"
          tabindex="-1"
        >
          <mark
            class="c16 fi-select-item--query_highlight"
          >
            cherry
          </mark>
        </li>
      </ul>
    </div>
  </div>
</body>
`;
